# ovc

./: .gitignore  .ovcignore  Cargo.toml  LICENSE  README.md  clippy_part.txt  run_log.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-ovc-actions.yml  release.yml
.ovc/: actions.yml
crates/ovc-actions/: Cargo.toml
crates/ovc-actions/src/: builtin.rs  config.rs  depcheck.rs  detect.rs  docker.rs  error.rs  history.rs  hooks.rs  lib.rs  runner.rs  secrets.rs  templates.rs  tests.rs
crates/ovc-api/: Cargo.toml
crates/ovc-api/src/: auth.rs  error.rs  lib.rs  models.rs  state.rs  static_files.rs
crates/ovc-api/src/routes/: access.rs  actions.rs  advanced.rs  archive.rs  branches.rs  commits.rs  docs.rs  files.rs  health.rs  llm.rs  mod.rs  notes.rs  pulls.rs  remotes.rs  repos.rs  search.rs  submodules.rs  sync.rs  tags.rs
crates/ovc-cli/: Cargo.toml
crates/ovc-cli/src/: app.rs  context.rs  main.rs  output.rs
crates/ovc-cli/src/commands/: access.rs  actions.rs  add.rs  archive.rs  bisect.rs  blame.rs  branch.rs  branch_protect.rs  checkout.rs  cherry_pick.rs  clean.rs  commit.rs  daemon.rs  describe.rs  diff.rs  gc.rs  git_export.rs  git_import.rs  grep.rs  init.rs  key.rs  log.rs  ls_files.rs  merge.rs  mod.rs  notes.rs  onboard.rs  pull.rs  push.rs  rebase.rs  reflog.rs  remote.rs  reset.rs  revert.rs  serve.rs  shortlog.rs  show.rs  stash.rs  status.rs  submodule.rs  (+5 more)
crates/ovc-cli/tests/: integration.rs
crates/ovc-cloud/: Cargo.toml
crates/ovc-cloud/src/: backend.rs  chunker.rs  error.rs  gcs.rs  lib.rs  local.rs  manifest.rs  sync.rs
crates/ovc-core/: Cargo.toml
crates/ovc-core/src/: access.rs  bisect.rs  blame.rs  cherry_pick.rs  compression.rs  config.rs  conflict.rs  crypto.rs  diff.rs  error.rs  format.rs  gc.rs  grep.rs  id.rs  ignore.rs  index.rs  keys.rs  lib.rs  lock.rs  merge.rs  notes.rs  object.rs  pulls.rs  rebase.rs  refs.rs  repository.rs  revert.rs  serialize.rs  stash.rs  store.rs  submodule.rs  wal.rs  workdir.rs
crates/ovc-git/: Cargo.toml
crates/ovc-git/src/: error.rs  export.rs  git_objects.rs  git_refs.rs  import.rs  lib.rs  oid_map.rs  write_git.rs
crates/ovc-llm/: Cargo.toml
crates/ovc-llm/src/: client.rs  config.rs  context.rs  error.rs  lib.rs  prompts.rs
crates/ovc-remote-helper/: Cargo.toml
crates/ovc-remote-helper/src/: main.rs
docker/ovc-actions/: Dockerfile
docs/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ActionCard.tsx  ActionConfigEditor.tsx  ActionSecretsPanel.tsx  ActionsDashboard.tsx  ActionsHistory.tsx  ActionsSettings.tsx  ArchiveDialog.tsx  BlameView.tsx  BranchList.tsx  ChangesDiffView.tsx  CommandPalette.tsx  CommitDetail.tsx  CommitForm.tsx  CommitGraph.tsx  ContextMenu.tsx  ContributorStats.tsx  CreateRepoModal.tsx  DependencyDashboard.tsx  DiffHunkBlocks.tsx  DiffViewer.tsx  ErrorBoundary.tsx  FileHistory.tsx  FileTree.tsx  FileViewer.tsx  GitIntegrationPanel.tsx  Header.tsx  Layout.tsx  LlmPanel.tsx  LoadingSpinner.tsx  MergePanel.tsx  PullRequestView.tsx  RepoContextBar.tsx  ReviewPanel.tsx  SearchBar.tsx  SessionIndicator.tsx  Sidebar.tsx  Skeleton.tsx  StashPanel.tsx  StashPreview.tsx  StatusPanel.tsx  (+4 more)
frontend/src/contexts/: CommandPaletteContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useActions.ts  useAuth.ts  useCacheGC.ts  useDocs.ts  useDocumentTitle.ts  useKeyboardShortcut.ts  useLlm.ts  useRepo.ts  useSessionTimer.ts  useTheme.ts
frontend/src/pages/: AccessPage.tsx  ActionsPage.tsx  BlamePage.tsx  DependenciesPage.tsx  DiffPage.tsx  DocsPage.tsx  HistoryPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PullRequestPage.tsx  PullRequestsPage.tsx  ReflogPage.tsx  RepoListPage.tsx  RepoOverviewPage.tsx  RepoPage.tsx  SearchPage.tsx  SettingsPage.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: graph-layout.ts  highlight.ts
scripts/: install.ps1  install.sh
tests/: ovc-e2e-test.sh
