[workspace]
members = [
    "crates/ovc-core",
    "crates/ovc-git",
    "crates/ovc-cloud",
    "crates/ovc-api",
    "crates/ovc-actions",
    "crates/ovc-cli",
    "crates/ovc-llm",
    "crates/ovc-remote-helper",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.5"
authors = ["Olib AI <dev@olib.ai>"]
license = "MIT"
repository = "https://github.com/Olib-AI/ovc"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

# Cryptography
blake3 = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Compression
zstd = "0.13"
flate2 = "1"

# Hashing
sha1 = "0.11"
hmac = "0.12"

# Asymmetric cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = { version = "4", features = ["digest"] }

# Encoding
hex = "0.4"
base64 = "0.22"

# Filesystem
walkdir = "2"
dirs = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
console = "0.16"
dialoguer = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Async & networking
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }

# Web server
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-full", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# YAML & regex
serde_yaml = "0.9"
regex = "1"
globset = "0.4"

# Archive formats
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }

# Internal crates
ovc-core = { path = "crates/ovc-core" }
ovc-git = { path = "crates/ovc-git" }
ovc-cloud = { path = "crates/ovc-cloud" }
ovc-api = { path = "crates/ovc-api" }
ovc-actions = { path = "crates/ovc-actions" }
ovc-llm = { path = "crates/ovc-llm" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Reasonable relaxations for pedantic
module_name_repetitions = { level = "allow" }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
