[package]
name = "ovc-api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API server for OVC — Axum-based HTTP daemon exposing repository operations"

[lints]
workspace = true

[dependencies]
ovc-core = { workspace = true }
ovc-cloud = { workspace = true }
ovc-actions = { workspace = true }
ovc-llm = { workspace = true }
futures = { workspace = true }
serde_yaml = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
subtle = "2.6.1"
tar = { workspace = true }
flate2 = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1.3"

[lib]
path = "src/lib.rs"
