[package]
name = "ovc-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for OVC (Olib Version Control)"

[[bin]]
name = "ovc"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ovc-core = { workspace = true }
ovc-git = { workspace = true }
ovc-cloud = { workspace = true }
ovc-actions = { workspace = true }
ovc-api = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
zeroize = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
assert_cmd = "2.2.1"
tempfile = "3"
predicates = "3.1.4"
