[package]
name = "ovc-cloud"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Cloud sync layer for OVC — content-defined chunking and storage backends"

[lints]
workspace = true

[dependencies]
ovc-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
