[package]
name = "ovc-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for OVC (Olib Version Control) — object model, crypto, storage, and .ovc file format"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
blake3 = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = "3"
